# prepublish

./: Cargo.toml  README.md
crud/: Cargo.toml
crud-derive/: Cargo.toml
crud-derive/src/: lib.rs
crud/src/: lib.rs
migration/: Cargo.toml
migration/src/: m20220101_000001_create_table.rs
mongo/: Cargo.toml
mongo/src/: attached.rs  gridfs.rs  lib.rs  oid.rs  owned.rs
mongo/src/entity/: mod.rs  update.rs
notice/: Cargo.toml
notice/src/: email.rs
src/: cfg.rs  main.rs  state.rs
src/mongo_entities/: examples.rs  mod.rs  profile.rs  review.rs  thesis.rs  version.rs
src/mongo_entities/paper_collection/: category.rs  magazine.rs  mod.rs
src/routes/: mod.rs  paper_collection.rs  review.rs  thesis.rs  version.rs
src/routes/account/: logio.rs  mod.rs  profile.rs  tools.rs
src/routes/common/: auth.rs  docs.rs  err.rs  file.rs  handlers.rs  mod.rs  notice.rs
