[package]
name = "mongo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aide = { version = "0.11.0", features = ["macros"] }
async-trait = "0.1.68"
axum = "0.6.18"
chrono = { version = "0.4.24", features = ["serde"] }
crud = { path = "../crud" }
crud-derive = { path = "../crud-derive" }
futures-util = "0.3.28"
indexmap = "1.9.3"
mongodm = { version = "0.9.1", features = ["chrono-0_4"] }
schemars = { version = "0.8.12", features = ["chrono"] }
serde = { version = "1.0.162", features = ["derive"] }
serde_with = "3.0.0"
